fixed #13 - the allstoringen was not wrapping correctly added "overflow: auto" to give the wrapper the same height and width as the items inside

--- a/UC alert tool/Content/Site.css
+++ b/UC alert tool/Content/Site.css
@@ -82,3 +82,6 @@ textarea{
 .category-header{
     text-align: center;
 }
+.allStoringen {
+    overflow: auto;
+}
